[TASK] change namespace viewhelper for quote

--- a/Resources/Private/Templates/ContentElements/Static/Quote.html
+++ b/Resources/Private/Templates/ContentElements/Static/Quote.html
@@ -6,9 +6,9 @@
   <!-- theme_t3kit: Templates/ContentElements/Quote.html [begin] -->
   <blockquote class="quote">
     <div class="quote__body">
-      <core:contentEditable table="tt_content" field="bodytext" uid="{data.uid}">
+      <t3kit:contentEditable table="tt_content" field="bodytext" uid="{data.uid}">
         <p class="quote__body-p">{data.bodytext}</p>
-      </core:contentEditable>
+      </t3kit:contentEditable>
       <span class="quote__body-icon icons icon-t3-quoteMark" aria-hidden="true"></span>
     </div>
     <footer class="quote__footer">
