--- a/theme/src/styles/_variables.scss
+++ b/theme/src/styles/_variables.scss
@@ -50,23 +50,30 @@ $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberati
 $font-family-base:            $font-family-sans-serif;
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg:                $font-size-base * 1.25 !default;
-$font-size-sm:                $font-size-base * .875 !default;
+$font-size-sm:                $font-size-base * 0.875 !default;
 $line-height-base:            1.5 !default;
 
 // Navbar
 // Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
 $navbar-brand-font-size:            $font-size-lg !default;
-$nav-link-padding-y:                .5rem !default;
+$nav-link-padding-y:                0.5rem !default;
 $nav-link-height:                   $font-size-base * $line-height-base + $nav-link-padding-y * 2 !default;
 $navbar-brand-height:               $navbar-brand-font-size * $line-height-base !default;
 $navbar-brand-padding-y:            ($nav-link-height - $navbar-brand-height) / 2 !default;
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default;
 
 // ==============================
 // Import Bootstrap default theme
 @import 'bootstrap/variables';
 // ==============================
 
-
 // ==============================
-// t3kit variables
+// t3kit specific variables
 // ==============================
