--- a/theme/src/styles/content-elements/big-icon-text-button/_index.scss
+++ b/theme/src/styles/content-elements/big-icon-text-button/_index.scss
@@ -1,4 +1,24 @@
-@use '../../variables' as v;
+// =========================================================
+// !!! include media query inside the selector==============
+// =========================================================
+// Example:
+// @use '../../bootstrap/mixins' as mixin;
+// header {
+//   width: 200px;
+
+//   @include mixin.media-breakpoint-up(md) {
+//     width: 100px;
+//   }
+// }
+// =========================================================
+// =========================================================
+
+// use t3kit variables based on bootstrap variables
+// check "theme/src/styles/_variables.scss"
+@use '../../variables' as var;
+// use bootstrap mixins based on t3kit variable overrides
+// check "theme/src/styles/bootstrap/mixins/_index.scss"
+// @use '../../bootstrap/mixins' as mixin;
 
 .big-icon-text-btn__wrp {
     position: relative;
@@ -35,8 +55,8 @@
 
 .big-icon-text-btn__icon {
     padding: 30px 29px 30px 31px;
-    border: 2px solid tint(v.$primary, 70%);
-    color: v.$primary;
+    border: 2px solid tint(var.$primary, 70%);
+    color: var.$primary;
     border-radius: 55px;
     margin-right: 0;
     margin-bottom: 10px;
@@ -45,7 +65,7 @@
 }
 
 .big-icon-text-btn__sham-link {
-    color: v.$primary;
+    color: var.$primary;
 
     &:after {
         // @include icons();
