--- a/theme/src/styles/content-elements/contacts-card/_index.scss
+++ b/theme/src/styles/content-elements/contacts-card/_index.scss
@@ -1,4 +1,24 @@
-@use '../../variables' as v;
+// =========================================================
+// !!! include media query inside the selector==============
+// =========================================================
+// Example:
+// @use '../../bootstrap/mixins' as mixin;
+// header {
+//   width: 200px;
+
+//   @include mixin.media-breakpoint-up(md) {
+//     width: 100px;
+//   }
+// }
+// =========================================================
+// =========================================================
+
+// use t3kit variables based on bootstrap variables
+// check "theme/src/styles/_variables.scss"
+@use '../../variables' as var;
+// use bootstrap mixins based on t3kit variable overrides
+// check "theme/src/styles/bootstrap/mixins/_index.scss"
+// @use '../../bootstrap/mixins' as mixin;
 
 .contacts-card {
     background: $main-body-bg;
