--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -65,6 +65,10 @@
           <f:if condition="{data.headerTopNavigation}">
             ------headerTopNavigation
           </f:if>
+          <div class="header-top__logo">
+            <img src="https://img.icons8.com/ios/50/000000/search--v1.png">
+            <img src="https://img.icons8.com/ios/50/000000/cross-flag.png">
+          </div>
 
         </div>
       </div>
@@ -74,7 +78,15 @@
     <f:if condition="{data.headerMiddle}">
       <div class="header-middle-wrp">
         <div class="header-middle">
-
+          <div class="container">
+            <div class="header-middle__logo" style="display: inline-block;">
+              <img src="https://demo.t3kit.com/fileadmin/example_content/images/logo.png">
+            </div>
+            <div class="header-middle__search_language" style="float: right;">
+              <img src="https://img.icons8.com/ios/50/000000/search--v1.png">
+              <img src="https://img.icons8.com/ios/50/000000/cross-flag.png">
+            </div>
+          </div>
         </div>
       </div>
     </f:if>
@@ -94,12 +106,11 @@
       class="main-navigation js__main-navigation">
       <div class="main-navigation__items-wrp js__navigation__items-wrp">
         <f:if condition="{data.mainNavigationLogo} > 0">
-          <f:variable name="mainNavigationLogo"><f:spaceless><f:render section="getClassesFromOptions" arguments="{selectedOption: data.mainNavigationLogo}" /></f:spaceless></f:variable>
-          <div class="main-navigation__logo {mainNavigationLogo}">
-            <img src="">
+          <div class="main-navigation__logo {data.mainNavigationLogo}"  style="display: inline-block;">
+            <img src="https://demo.t3kit.com/fileadmin/example_content/images/logo.png">
           </div>
         </f:if>
-        <ul class="main-navigation__items-list js__main-navigation__items-list ">
+        <ul class="main-navigation__items-list js__main-navigation__items-list "  style="display: inline-block;">
 
           <f:for each="{mainNavigation}" as="navItem">
             <li class="main-navigation__item js__main-navigation__item {navItem.data.uid} {f:if(condition: navItem.active, then:' _active')} {f:if(condition: navItem.children, then:' _sub')}">
@@ -121,6 +132,26 @@
           </f:for>
 
         </ul>
+        <f:if condition="{data.mainNavigationLangMenu} || {data.mainNavigationSearch}">
+          <div class="wrapper" style="float: right; background-color: #fff;">
+            <f:if condition="{data.mainNavigationLangMenu} > 0">
+              <div class="main-navigation__langMenu" style="display: inline-block;">
+                <img src="https://img.icons8.com/ios/50/000000/search--v1.png">
+              </div>
+            </f:if>
+            <f:if condition="{data.mainNavigationSearch} > 0">
+              <div class="main-navigation__search" style="display: inline-block;">
+                <img src="https://img.icons8.com/ios/50/000000/cross-flag.png">
+              </div>
+            </f:if>
+            <f:if condition="{data.extraSpaceLib} > 0">
+              <div class="main-navigation__lib" style="display: inline-block;">
+                <img src="https://img.icons8.com/ios/50/000000/cross-flag.png">
+              </div>
+            </f:if>
+          </div>
+        </f:if>
+        </div>
       </div>
     </nav>
 
@@ -170,7 +201,13 @@
     <!-- t3kit: LanguageNavigation [end] -->
   </f:if>
 </f:section>
-
+<f:comment>
+<f:if condition="{data.mainNavigationLogo} > 0">
+  <f:variable name="mainNavigationLogo"><f:spaceless><f:render section="getClassesFromOptions" arguments="{selectedOption: data.mainNavigationLogo}" /></f:spaceless></f:variable>
+  <div class="main-navigation__logo {mainNavigationLogo}">
+    <img src="https://demo.t3kit.com/fileadmin/example_content/images/logo.png">
+  </div>
+</f:if>
 <f:section name="getClassesFromOptions">
     <f:switch expression="{selectedOption}">
       <f:case value="1">d-block</f:case>
@@ -179,5 +216,5 @@
       <f:defaultCase>d-none</f:defaultCase>
     </f:switch>
 </f:section>
-
+</f:comment>
 </html>
